--- a/frontend/src/routes/editor/style.scss
+++ b/frontend/src/routes/editor/style.scss
@@ -1,20 +1,22 @@
 @use "style/variables" as v;
-@use "style/mixins" as m;
 
 .editor {
-	@include m.full-size;
+	height: 100%;
 	display: grid;
 	grid-template-columns: 250px 1fr;
-	
+
 	&-list {
-		border-right: 1px solid v.$divider;
+		height: 100%;
+		overflow-y: auto;
 
 		&-content {
-			overflow: auto;
+			height: calc(100% - 45px);
+			overflow-y: auto;
+			border-right: 1px solid v.$divider;
 		}
 	}
 
 	&-config {
-		overflow: auto;
+		overflow-y: auto;
 	}
 }
