--- a/frontend/src/style/index.scss
+++ b/frontend/src/style/index.scss
@@ -13,6 +13,7 @@ html, body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	line-height: normal;
+	overflow: hidden;
 }
 
 * {
@@ -52,7 +53,7 @@ a {
 }
 
 *::-webkit-scrollbar-track {
-    background: #ffffff;
+    background: transparent;
 }
 
 *::-webkit-scrollbar-thumb {
